fix(Modal): hide scrollbar space if not needed (#285)

--- a/src/scss/Modal.scss
+++ b/src/scss/Modal.scss
@@ -11,7 +11,7 @@
     right: 0;
   }
   & > .nds-modal-container {
-    overflow: scroll;
+    overflow: auto;
     max-height: 80vh;
     left: 50%;
     top: 50%;
